--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <!-- Ссылки -->
             <section class="links">
                <div class="link"><a href="https://t.me/Nikita_soltn">Telegram</a></div>
-               <div class="link"><a href="tel:"89998887766">+7 995 379-65-64</a>
+               <div class="link"><a href="tel:89998887766">+7 995 379-65-64</a>
                <div class="link"><a href="mailto:Nikita.soltn@yandex.ru">Email</a></div>
                <div class="link"><a href="https://wa.me/79953796564?text=%D0%9F%D1%80%D0%B8%D0%B2%D0%B5%D1%82!%20%F0%9F%91%8B">WHATSAPP</a></div>
 
