--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <link rel="stylesheet" href="css/resetStyle.css">
    <!-- подключение файла стилей -->
    <link rel="stylesheet" href="css/style.css?_v=1">
+   <img src="foto.jpg" width="200">
 </head>
 
 <body>
