--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   </div>
                   <div class="foto__foto">
                      <!-- Фото -->
-                     <img src="./image/foto.jpg" alt="Фотография">
+                     <img src="./image/foto.jpg" alt="Фотография"style="width: 400px; height: auto" />>
                   </div>
                </div>
                <div class="text">
