--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   </div>
                   <div class="foto__foto">
                      <!-- Фото -->
-                     <img src="./image/foto.jpg" alt="Фото">
+                     <img src=".foto.jpg" alt="Фото">
                   </div>
                </div>
                <div class="text">
