--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                      <img src="./image/foto__frame.jpg" alt="Рамка для фотографии из камней">
                   </div>
                   <div class="foto__foto">
-                     <!-- Фото -->
+                     <!-- Фоточка -->
                      <img src=".foto.jpg" alt="Фото">
                   </div>
                </div>
