--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                      <div class="list"><span>age</span><span>:</span><span>30</span></div>
                      <div class="list"><span>work</span><span>:</span><span>Junoir QA </span></div>
                      <div class="list"><span>Power</span><span>:</span><span>Sentry Kibana, Postman, SoapUI, Charles, DevTools, PostgreSQL (Select, join, Group by), MongoDB</span></div>
-                     <div class="list"><span>location</span><span>:</span><span>rosov-na-donu</span></div>
+                     <div class="list"><span>location</span><span>:</span><span>rostov-on-don</span></div>
 
                   </div>
                </div>
